# migaton

./: .env  .gitmodules  Cargo.toml  README.md
src/: lib.rs  migrator.rs
src/migrator/: connectiontype.rs  domigrations.rs  migrateto.rs  migration.rs  migrationdirection.rs  migratoraccess.rs  testmigrator.rs
test_sql/: 1.chk.sql  1.down.sql  1.up.sql  2.chk.sql  2.down.sql  2.up.sql  3.chk.sql  3.down.sql  3.up.sql  migaton.yml
test_sql/tbl_tests/: chk.sql
test_sql/tbl_tforeigns/: chk.sql
test_sql/tbl_tforeigns_add_name/: chk.sql  down.sql
test_sql/tbl_tforeigns_alter_name/: chk.sql  down.sql  up.sql
