[package]
name = "migaton"
version = "0.1.0"
authors = ["Frankie Baffa <frankie.baffa@gentryhealthservices.com>"]
edition = "2018"
[dependencies]
rusqlite = { version = "0.25", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
worm = { git = "https://github.com/frankiebaffa/worm", branch = "master" }
worm_derive = { git = "https://github.com/frankiebaffa/worm_derive", branch = "master" }

